ta tudo certo ao menos

--- a/src/app/auth/cadastro/cadastro.page.html
+++ b/src/app/auth/cadastro/cadastro.page.html
@@ -74,7 +74,7 @@
           </ion-icon>
         </div>
 
-        <!-- Campo Confirmar Senha -->
+        <!-- Talhão Confirmar Senha -->
         <div class="input-group">
           <ion-icon name="lock-closed-outline" class="input-icon"></ion-icon>
           <input 
